# MultiAgentIR

./: 1.md  CLAUDE.md  README.md  README_EN.md  new.md  常见测试方法.md  快速开始.md
.claude/: settings.local.json
.trae/specs/deep-research-system-implementation/: checklist.md  spec.md  tasks.md
NOWDoc/: deep_research_system_development_doc_v_1.md
OLDDoc/: 详细开发计划.md  需求.md
deep_research_system/: .env.example  README.md  bug修复.md  debug_api.py  debug_config.py  environment.yml  main.py  pyproject.toml
deep_research_system/app/agents/: analyzer.py  base.py  critic.py  debate.py  planner.py  reader.py  searcher.py  validator.py  writer.py
deep_research_system/app/api/: routes.py  routes_health.py  routes_models.py  routes_research.py
deep_research_system/app/core/: config.py  config_loader.py  errors.py  logging.py  middleware.py  redis_client.py  security.py
deep_research_system/app/model_pool/: circuit_breaker.py  client.py  key_pool.py  registry.py  router.py
deep_research_system/app/prompts/: loader.py  renderer.py
deep_research_system/app/schemas/: agent_outputs.py  model.py  response.py  state.py  task.py
deep_research_system/app/services/: cache_service.py  config_service.py  research_service.py  search_service.py  task_state_store.py  trace_service.py
deep_research_system/app/topology/: base.py  debate.py  hierarchical.py  router.py
deep_research_system/app/utils/: ids.py  time.py
deep_research_system/app/validators/: report_validator.py
deep_research_system/config/: agents.yaml  app.yaml  models.yaml  topology.yaml
deep_research_system/data/: config.db
deep_research_system/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
deep_research_system/frontend/src/: App.vue  main.ts
deep_research_system/frontend/src/api/: models.ts  research.ts
deep_research_system/frontend/src/components/layout/: AppSidebar.vue
deep_research_system/frontend/src/components/research/: AgentNode.vue  AuditTrail.vue  DetailPanel.vue  MetricsCard.vue  ProgressBar.vue  ReportViewer.vue  ResearchForm.vue  TopologyGraph.vue
deep_research_system/frontend/src/router/: index.ts
deep_research_system/frontend/src/stores/: config.ts  research.ts
deep_research_system/frontend/src/styles/: sci-fi.css
deep_research_system/frontend/src/utils/: export.ts
deep_research_system/frontend/src/views/: ResearchView.vue  SettingsView.vue
deep_research_system/output/reports/: industry_report_task_9fd554bb5a40_20260523_194603.md  open_question_task_80e6bfc045a9_20260523_194657.md
deep_research_system/prompts/analyzer/: v1_cross_source.zh.j2  v2_claim_graph.zh.j2
deep_research_system/prompts/critic/: v1_red_team.zh.j2  v2_structured_critique.zh.j2  v3_uncertainty_routing.zh.j2
deep_research_system/prompts/debate/: hypothesis_agent.zh.j2  synthesizer_v2.zh.j2
deep_research_system/prompts/planner/: v2_structured.zh.j2  v3_hypothesis.zh.j2
deep_research_system/prompts/reader/: v1_extraction.zh.j2  v2_atomic_facts.zh.j2
deep_research_system/prompts/searcher/: v2_query_expansion.zh.j2  v3_real_search.zh.j2  v4_query_planner.zh.j2
deep_research_system/prompts/validator/: v1_check.zh.j2  v2_evidence_check.zh.j2
deep_research_system/prompts/writer/: industry_report.zh.j2  open_research_memo.zh.j2
deep_research_system/scripts/: run_demo.py  seed_config.py
deep_research_system/tests/: conftest.py  test_key_pool.py  test_model_router.py  test_report_validator.py  test_security.py  test_topology_router.py
docs/: ARCHITECTURE.md
